--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.2",
+    "@types/jsdom": "^21.1.7",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.1.5",
